--- a/trendNodeHBS/views/index.html
+++ b/trendNodeHBS/views/index.html
@@ -1,166 +1,219 @@
-<!doctype html>
-<html class="no-js" lang="en">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Foundation | Welcome</title>
-	<link rel="stylesheet" href="css/foundation.css" />
-	<script src="js/vendor/modernizr.js"></script>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Trend Aggregator - A One Stop Social Media Platform</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/landing-page.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
+
 <body>
 
-<div class="row">
-	<div class="large-12 columns">
-		<h1>Welcome to Foundation</h1>
-	</div>
-</div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+        <div class="container topnav">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand topnav" href="#">Trend Aggregator</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#services">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#contact">About Us</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-<div class="row">
-	<div class="large-12 columns">
-		<div class="panel">
-			<h3>We&rsquo;re stoked you want to try Foundation! </h3>
-			<p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-			<p>Once you've exhausted the fun in this document, you should check out:</p>
-			<div class="row">
-				<div class="large-4 medium-4 columns">
-					<p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-				</div>
-				<div class="large-4 medium-4 columns">
-					<p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-				</div>
-				<div class="large-4 medium-4 columns">
-					<p><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
 
-<div class="row">
-	<div class="large-8 medium-8 columns">
-		<h5>Here&rsquo;s your basic grid:</h5>
-		<!-- Grid Example -->
+    <!-- Header -->
+    <a name="about"></a>
+    <div class="intro-header">
+        <div class="container">
 
-		<div class="row">
-			<div class="large-12 columns">
-				<div class="callout panel">
-					<p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-6 medium-6 columns">
-				<div class="callout panel">
-					<p>Six columns</p>
-				</div>
-			</div>
-			<div class="large-6 medium-6 columns">
-				<div class="callout panel">
-					<p>Six columns</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="large-4 medium-4 small-4 columns">
-				<div class="callout panel">
-					<p>Four columns</p>
-				</div>
-			</div>
-			<div class="large-4 medium-4 small-4 columns">
-				<div class="callout panel">
-					<p>Four columns</p>
-				</div>
-			</div>
-			<div class="large-4 medium-4 small-4 columns">
-				<div class="callout panel">
-					<p>Four columns</p>
-				</div>
-			</div>
-		</div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-message">
+                        <h1>Welcome to <br> Trend Aggregator</h1>
+                        <h3>One Stop Social Website!</h3>
+                        <hr class="intro-divider">
+                       <ul class="list-inline intro-social-buttons">
+                        <li>
+                            <a href="/twitter" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        </li>
+                        <li>
+                            <a href="/insta" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-foursquare fa-fw"></i> <span class="network-name">Foursquare</span></a>
+                        </li>
+                                                    <li>
+                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i> <span class="network-name">Analytics</span></a>
+                            </li>
+                    </ul>
+                    </div>
+                </div>
+            </div>
 
-		<hr />
+        </div>
+        <!-- /.container -->
 
-		<h5>We bet you&rsquo;ll need a form somewhere:</h5>
-		<form>
-			<div class="row">
-				<div class="large-12 columns">
-					<label>Input Label</label>
-					<input type="text" placeholder="large-12.columns" />
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-4 medium-4 columns">
-					<label>Input Label</label>
-					<input type="text" placeholder="large-4.columns" />
-				</div>
-				<div class="large-4 medium-4 columns">
-					<label>Input Label</label>
-					<input type="text" placeholder="large-4.columns" />
-				</div>
-				<div class="large-4 medium-4 columns">
-					<div class="row collapse">
-						<label>Input Label</label>
-						<div class="small-9 columns">
-							<input type="text" placeholder="small-9.columns" />
-						</div>
-						<div class="small-3 columns">
-							<span class="postfix">.com</span>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-12 columns">
-					<label>Select Box</label>
-					<select>
-						<option value="husker">Husker</option>
-						<option value="starbuck">Starbuck</option>
-						<option value="hotdog">Hot Dog</option>
-						<option value="apollo">Apollo</option>
-					</select>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-6 medium-6 columns">
-					<label>Choose Your Favorite</label>
-					<input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-					<input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-				</div>
-				<div class="large-6 medium-6 columns">
-					<label>Check these out</label>
-					<input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-					<input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="large-12 columns">
-					<label>Textarea Label</label>
-					<textarea placeholder="small-12.columns"></textarea>
-				</div>
-			</div>
-		</form>
-	</div>
+    </div>
+    <!-- /.intro-header -->
 
-	<div class="large-4 medium-4 columns">
-		<h5>Try one of these buttons:</h5>
-		<p><a href="#" class="small button">Simple Button</a><br/>
-			<a href="#" class="small radius button">Radius Button</a><br/>
-			<a href="#" class="small round button">Round Button</a><br/>
-			<a href="#" class="medium success button">Success Btn</a><br/>
-			<a href="#" class="medium alert button">Alert Btn</a><br/>
-			<a href="#" class="medium secondary button">Secondary Btn</a></p>
-		<div class="panel">
-			<h5>So many components, girl!</h5>
-			<p>A whole kitchen sink of goodies comes with Foundation. Checkout the docs to see them all, along with details on making them your own.</p>
-			<a href="http://foundation.zurb.com/docs/" class="small button">Go to Foundation Docs</a>
-		</div>
-	</div>
-</div>
+    <!-- Page Content -->
 
-<script src="js/vendor/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
-<script>
-	$(document).foundation();
-</script>
+	<a  name="services"></a>
+    <div class="content-section-a">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Get your daily dose of Social feed</h2>
+                    <p class="lead">Catch up on the trending topics from any of your favourtie social websites like <a target="_blank" href="http://join.deathtothestockphoto.com/">Twitter</a>, <a target="_blank" href="http://join.deathtothestockphoto.com/">Instagram</a>, <a target="_blank" href="http://join.deathtothestockphoto.com/">Foursquare</a></p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="img/ipad.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Get Real Time Insights</h2>
+                    <p class="lead">Discover places people around you check in to, know who is tweeting and from where through our <a target="_blank" href="http://www.psdcovers.com/">Real Time Analytics</a>!</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="img/dog.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
+   	<a  name="contact"></a>
+    <div class="banner">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2>Your social feed:</h2>
+                </div>
+                <div class="col-lg-8">
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-foursquare fa-fw"></i> <span class="network-name">Foursquare</span></a>
+                        </li>
+                                                    <li>
+                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i> <span class="network-name">Analytics</span></a>
+                            </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.banner -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#about">About</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#services">Services</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                        <li class="pull-right form-inline">
+                        	<form><input type="email" placeholder="enter your email id" style="border-radius:5px; width:300px; height:43px; border:1px dashed">
+                            <a class="btn btn-default btn-lg"><span class="network-name">Stay Updated</span></a></form>
+                        </li>
+                    </ul>
+                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
