--- a/trendNodeHBS/views/foursquare.html
+++ b/trendNodeHBS/views/foursquare.html
@@ -112,18 +112,23 @@
 </nav>
 
 
-{{#each instas}}
+{{#each checkins}}
 
 <div class="large-3 columns">
 	<div class="panel">
-		<img src={{url}}>
-		<p>Likes: {{likesCount}}</p>
-		<p>Comments: {{commentCount}}</p>
+		<h5>{{name}}</h5>
+		<p>{{fullAddress}}</p>
+		<h5>Checkin details</h5>
+		<p>City: {{city}}</p>
+		<p>State: {{state}}</p>
+		<p>Zip: {{zipCode}}</p>
+		<h5>Checkin Stats</h5>
+		<p>No. of checkins: {{checkinsCounts}}</p>
+		<p>No. of users checking in: {{usersCount}}</p>
 	</div>
 </div>
 
 {{/each}}
-
 
 <footer class="row">
 	<div class="large-12 columns">
