--- a/trendNodeHBS/views/twitter.html
+++ b/trendNodeHBS/views/twitter.html
@@ -112,101 +112,15 @@
 </nav>
 
 
+{{#each tweets}}
 
-
-
-
-<div class="row">
-
-	<div class="large-3 columns">
-		<div class="panel">
-			<h5>Panel Title</h5>
-			<p>This is a three columns grid panel with an arbitrary height.</p>
-		</div>
-	</div>
-	<div class="large-6 columns">
-		<div class="panel">
-			<h5>Panel Title</h5>
-			<p>This is a six columns grid panel with an arbitrary height. Bacon ipsum dolor sit amet salami ham hock biltong ball tip drumstick sirloin pancetta meatball short loin.</p>
-		</div>
-	</div>
-	<div class="large-3  columns">
-		<div class="panel">
-			<h5>Panel Title</h5>
-			<p>This is a three columns grid panel with an arbitrary height.</p>
-		</div>
-	</div>
-
-</div>
-
-
-
-<div class="row">
-
-	<div class="large-6 columns">
-		<div class="panel">
-			<h5>Panel Title</h5>
-			<p>This is a six columns grid panel with an arbitrary height. Bacon ipsum dolor sit amet salami ham hock biltong ball tip drumstick sirloin pancetta meatball short loin.</p>
-		</div>
-	</div>
-	<div class="large-2 columns">
-		<div class="panel">
-			<p>
-				<img src="http://placehold.it/200x200"/>
-			</p>
-		</div>
-	</div>
-	<div class="large-4 columns">
-		<div class="panel">
-			<h5>Panel Title</h5>
-			<p>This is a four columns grid panel with an arbitrary height. Bacon ipsum dolor sit amet salami.</p>
-		</div>
-	</div>
-
-</div>
-
-
-<div class="row">
-
-	<div class="large-4 columns">
-		<div class="panel">
-			<div id="twitter">Trending Topics
-				<ul>
-					{{#each tweets}}
-					<li><a href={{url}}>{{name}}</a></li>
-					{{/each}}
-				</ul>
-			</div>
-		</div>
+<div class="large-3 columns">
+	<div class="panel">
+		<h5><a href={{url}}>{{name}}</a></h5>
 	</div>
 </div>
 
-
-<div class="row">
-
-	<div class="large-6 columns">
-		<div class="panel">
-			<h5>Panel Title</h5>
-			<p>This is a six columns grid panel with an arbitrary height. Bacon ipsum dolor sit amet salami ham hock biltong ball tip drumstick sirloin pancetta meatball short loin.</p>
-		</div>
-	</div>
-	<div class="large-3 columns">
-		<div class="panel">
-			<h5>Panel Title</h5>
-			<p>This is a three columns grid panel with an arbitrary height.</p>
-		</div>
-	</div>
-	<div class="large-3 columns">
-		<div class="panel">
-			<h5>Panel Title</h5>
-			<p>This is a three columns grid panel with an arbitrary height.</p>
-		</div>
-	</div>
-
-</div>
-
-
-
+{{/each}}
 
 
 <footer class="row">
