--- a/Visualization/templates/twitter.html
+++ b/Visualization/templates/twitter.html
@@ -14,7 +14,7 @@
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="./">TrendAggregator Dashboard</a>
+        <a class="navbar-brand" href="./">Twitter Dashboard</a>
       </div>
     </div>
   </div>
@@ -26,11 +26,11 @@
       <div class="col-sm-6">
         <div class="row">
 
-          
+          <!-- Time Chart --> 
           <div class="col-sm-12">
             <div class="chart-wrapper">
               <div class="chart-title">
-                Point of Time
+                Number of Tweets
               </div>
               <div class="chart-stage">
                 <div id="time-chart"></div>
@@ -43,7 +43,7 @@
           <div class="col-sm-6">
             <div class="chart-wrapper">
               <div class="chart-title">
-                Place Search
+                Type of Tweets
               </div>
               <div class="chart-stage">
                 <div id="resource-type-row-chart"></div>
@@ -53,39 +53,39 @@
           <!-- Resources Pie -->
 
           <!-- Poverty Pie -->
-          <div class="col-sm-6">
+          <!-- <div class="col-sm-6">
             <div class="chart-wrapper">
               <div class="chart-title">
-                Category Search
+                Poverty Level
               </div>
               <div class="chart-stage">
                 <div id="poverty-level-row-chart"></div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- Poverty Pie -->
 
         </div>
       </div>
 
       <!-- Map -->  
-      <div class="col-sm-6">
+      <!-- <div class="col-sm-6">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Location Specific
+            Distribution of Donations
           </div>
           <div class="chart-stage">
             <div id="us-chart"></div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Map -->
 
       <!-- Metric 1 -->
       <div class="col-sm-3">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Checkins
+            Total Number of Tweets
           </div>
           <div class="chart-stage">
             <div id="number-projects-nd"></div>
@@ -95,16 +95,16 @@
       <!-- Metric 1 -->
 
       <!-- Metric 2 -->
-      <div class="col-sm-3">
+      <!-- <div class="col-sm-3">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Total number of Users
+            Total number of Tweets
           </div>
           <div class="chart-stage">
             <div id="total-donations-nd"></div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Metric 2 -->
 
     </div>
@@ -112,7 +112,7 @@
   </div>
 
     <hr>
-    <p class="small text-muted">Built with &#9829; by <a href="https://keen.io">Keen IO</a></p>
+    
 
   </div>
 
@@ -124,7 +124,9 @@
   <script src="./static/lib/js/d3.js"></script>
   <script src="./static/lib/js/dc.js"></script>
   <script src="./static/lib/js/queue.js"></script>
-<script src="./static/lib/js/keen.min.js"></script>
-<script src='./static/js/graphs.js' type='text/javascript'></script>
+
+
+  <script src="./static/lib/js/keen.min.js"></script>
+  <script src='./static/js/twitterCharts.js' type='text/javascript'></script>
 </body>
 </html>
