still more styling

--- a/trendNodeHBS/views/foursquare.html
+++ b/trendNodeHBS/views/foursquare.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="css/foundation.css" />
 	<script src="js/vendor/modernizr.js"></script>
+	<link rel="stylesheet" href="css/twitter.css" />
 </head>
 <body>
 <nav class="top-bar" data-topbar>
@@ -15,7 +16,7 @@
 		<li class="name">
 			<h1>
 				<a href="#">
-					Top Bar Title
+					Top Places on Foursquare
 				</a>
 			</h1>
 		</li>
@@ -23,108 +24,32 @@
 	</ul>
 
 	<section class="top-bar-section">
-
-		<ul class="left">
-			<li class="divider"></li>
-			<li class="has-dropdown">
-				<a class="active" href="#">Main Item 1</a>
-				<ul class="dropdown">
-					<li><label>Section Name</label></li>
-					<li><a href="#" class="">Dropdown Level 1</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li class="divider"></li>
-					<li><label>Section Name</label></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li class="divider"></li>
-					<li><a href="#">See all →</a></li>
-				</ul>
-			</li>
-			<li class="divider"></li>
-			<li><a href="#">Main Item 2</a></li>
-			<li class="divider"></li>
-			<li class="has-dropdown">
-				<a href="#">Main Item 3</a>
-				<ul class="dropdown">
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li class="divider"></li>
-					<li><a href="#">See all →</a></li>
-				</ul>
-			</li>
-
-		</ul>
-
-
 		<ul class="right">
 			<li class="divider"></li>
-			<li class="has-dropdown">
-				<a href="#">Main Item 4</a>
-				<ul class="dropdown">
-					<li><label>Section Name</label></li>
-					<li class="has-dropdown">
-						<a href="#" class="">Has Dropdown, Level 1</a>
-						<ul class="dropdown">
-							<li><a href="#">Dropdown Options</a></li>
-							<li><a href="#">Dropdown Options</a></li>
-							<li class="has-dropdown">
-								<a href="#">Has Dropdown, Level 2</a>
-								<ul class="dropdown test">
-									<li><a href="#">Subdropdown Option</a></li>
-									<li><a href="#">Subdropdown Option</a></li>
-									<li><a href="#">Subdropdown Option</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Subdropdown Option</a></li>
-							<li><a href="#">Subdropdown Option</a></li>
-							<li><a href="#">Subdropdown Option</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li class="divider"></li>
-					<li><label>Section Name</label></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li class="divider"></li>
-					<li><a href="#">See all →</a></li>
-				</ul>
-			</li>
 			<li class="divider"></li>
-			<li><a href="#">Main Item 5</a></li>
+			<li><a href="/">Home</a></li>
 			<li class="divider"></li>
-			<li class="has-dropdown">
-				<a href="#">Main Item 6</a>
-				<ul class="dropdown">
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li><a href="#">Dropdown Option</a></li>
-					<li class="divider"></li>
-					<li><a href="#">See all →</a></li>
-				</ul>
-			</li>
+			<li><a href="/insta">Instagram</a></li>
+			<li class="divider"></li>
+			<li><a href="/twitter">Twitter</a></li>
 		</ul>
 	</section>
 </nav>
 
-
 {{#each checkins}}
 
-<div class="large-3 columns">
-	<div class="panel">
-		<h5>{{name}}</h5>
-		<p>{{fullAddress}}</p>
-		<h5>Checkin details</h5>
-		<p>City: {{city}}</p>
-		<p>State: {{state}}</p>
-		<p>Zip: {{zipCode}}</p>
-		<h5>Checkin Stats</h5>
-		<p>No. of checkins: {{checkinsCounts}}</p>
-		<p>No. of users checking in: {{usersCount}}</p>
+<div class="large-4 columns">
+	<div class="panel" style="border-radius: 5px; background-color: #ffffff; color: #000000; border: dashed; border-width: 1px; background-opacity:60%;">
+		<h4 style="align-self: center; color: #210B61">{{name}}</h4>
+		{{fullAddress}}
+		<h4 style="color: #29088A">Checkin details</h4>
+		City: {{city}}
+		State: {{state}}
+		Zip: {{zipCode}}
+		<h4 style="color: #3104B4">Checkin Stats</h4>
+		No. of checkins: {{checkinsCounts}}
+		No. of users checking in: {{usersCount}}
+		</div>
 	</div>
 </div>
 
