Visualization Trends - JavaScript code

--- a/Visualization/templates/twitter.html
+++ b/Visualization/templates/twitter.html
@@ -24,26 +24,26 @@
     <div class="row">
 
       <div class="col-sm-6">
-        <div class="row">
-
-          <!-- Time Chart --> 
+        
+<div class="column">
+      <!-- Time Chart --> 
           <div class="col-sm-12">
             <div class="chart-wrapper">
               <div class="chart-title">
-                Number of Tweets
+                Point of Time
               </div>
               <div class="chart-stage">
                 <div id="time-chart"></div>
               </div>
             </div>
           </div>
-          <!-- Time Chart --> 
+          <!-- Time Chart -->     
 
           <!-- Resources Pie -->
           <div class="col-sm-6">
             <div class="chart-wrapper">
               <div class="chart-title">
-                Type of Tweets
+                Tweets
               </div>
               <div class="chart-stage">
                 <div id="resource-type-row-chart"></div>
@@ -65,7 +65,7 @@
           </div> -->
           <!-- Poverty Pie -->
 
-        </div>
+       
       </div>
 
       <!-- Map -->  
@@ -85,7 +85,7 @@
       <div class="col-sm-3">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Total Number of Tweets
+            Number of Tweets
           </div>
           <div class="chart-stage">
             <div id="number-projects-nd"></div>
@@ -111,7 +111,7 @@
 
   </div>
 
-    <hr>
+</div>
     
 
   </div>
