--- a/Visualization/templates/index.html
+++ b/Visualization/templates/index.html
@@ -14,7 +14,7 @@
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="./">TrendAggregator Dashboard</a>
+        <a class="navbar-brand" href="./">Four Square Dashboard</a>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@
         <div class="row">
 
           
-          <div class="col-sm-12">
+          <!-- <div class="col-sm-12">
             <div class="chart-wrapper">
               <div class="chart-title">
                 Point of Time
@@ -36,14 +36,14 @@
                 <div id="time-chart"></div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- Time Chart --> 
 
           <!-- Resources Pie -->
           <div class="col-sm-6">
             <div class="chart-wrapper">
               <div class="chart-title">
-                Place Search
+                Places
               </div>
               <div class="chart-stage">
                 <div id="resource-type-row-chart"></div>
@@ -56,7 +56,7 @@
           <div class="col-sm-6">
             <div class="chart-wrapper">
               <div class="chart-title">
-                Category Search
+                Categories
               </div>
               <div class="chart-stage">
                 <div id="poverty-level-row-chart"></div>
@@ -85,7 +85,7 @@
       <div class="col-sm-3">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Checkins
+            Number of Checkins
           </div>
           <div class="chart-stage">
             <div id="number-projects-nd"></div>
@@ -112,7 +112,7 @@
   </div>
 
     <hr>
-    <p class="small text-muted">Built with &#9829; by <a href="https://keen.io">Keen IO</a></p>
+
 
   </div>
 
