HTML templates to render visualization

--- a/Visualization/templates/index.html
+++ b/Visualization/templates/index.html
@@ -59,7 +59,7 @@
                 Categories
               </div>
               <div class="chart-stage">
-                <div id="poverty-level-row-chart"></div>
+                <div id="category-level-row-chart"></div>
               </div>
             </div>
           </div>
@@ -101,7 +101,7 @@
             Total number of Users
           </div>
           <div class="chart-stage">
-            <div id="total-donations-nd"></div>
+            <div id="total-users-nd"></div>
           </div>
         </div>
       </div>
@@ -125,6 +125,6 @@
   <script src="./static/lib/js/dc.js"></script>
   <script src="./static/lib/js/queue.js"></script>
 <script src="./static/lib/js/keen.min.js"></script>
-<script src='./static/js/graphs.js' type='text/javascript'></script>
+<script src='./static/js/foursquareCharts.js' type='text/javascript'></script>
 </body>
 </html>
