--- a/Visualization/templates/instagram.html
+++ b/Visualization/templates/instagram.html
@@ -59,7 +59,7 @@
                 Captions
               </div>
               <div class="chart-stage">
-                <div id="poverty-level-row-chart"></div>
+                <div id="category-level-row-chart"></div>
               </div>
             </div>
           </div>
@@ -101,7 +101,7 @@
             Total number of Users
           </div>
           <div class="chart-stage">
-            <div id="total-donations-nd"></div>
+            <div id="total-users-nd"></div>
           </div>
         </div>
       </div>
