Final code for demo

--- a/trendNodeHBS/views/foursquare.html
+++ b/trendNodeHBS/views/foursquare.html
@@ -32,13 +32,15 @@
 			<li><a href="/insta">Instagram</a></li>
 			<li class="divider"></li>
 			<li><a href="/twitter">Twitter</a></li>
+			<li class="divider"></li>
+			<li><a href="http://localhost:5000/">Analytics</a></li>
 		</ul>
 	</section>
 </nav>
 
 {{#each checkins}}
 
-<div class="large-4 columns">
+<div class="large-6 columns">
 	<div class="panel" style="border-radius: 5px; background-color: #ffffff; color: #000000; border: dashed; border-width: 1px; background-opacity:60%;">
 		<h4 style="align-self: center; color: #210B61">{{name}}</h4>
 		{{fullAddress}}
