--- a/trendNodeHBS/views/insta.html
+++ b/trendNodeHBS/views/insta.html
@@ -32,6 +32,8 @@
 			<li><a href="/twitter">Twitter</a></li>
 			<li class="divider"></li>
 			<li><a href="/foursquare">Foursquare</a></li>
+			<li class="divider"></li>
+			<li><a href="http://localhost:5000/instagramTrend">Analytics</a></li>
 		</ul>
 	</section>
 </nav>
