--- a/trendNodeHBS/views/twitter.html
+++ b/trendNodeHBS/views/twitter.html
@@ -32,6 +32,8 @@
 			<li><a href="/insta">Instagram</a></li>
 			<li class="divider"></li>
 			<li><a href="/foursquare">Foursquare</a></li>
+			<li class="divider"></li>
+			<li><a href="http://localhost:5000/twitter">Analytics</a></li>
 		</ul>
 	</section>
 </nav>
